versions/0.8.0/_sources/refs/_aws-cdk_aws-stepfunctions.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"3VJ9mXfEpxYpx2WBh4f0GmAn452s9v+JYdwlkR2T7ZI="}

@aws-cdk/aws-stepfunctions
==========================

.. mdinclude:: ./__aws-cdk_aws-stepfunctions.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-stepfunctions

ActivityName
^^^^^^^^^^^^

.. py:class:: ActivityName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

StateMachineName
^^^^^^^^^^^^^^^^

.. py:class:: StateMachineName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-stepfunctions.cloudformation

ActivityResource
~~~~~~~~~~~~~~~~

.. py:class:: ActivityResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ActivityResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ActivityResource``
   :type properties: :py:class:`~@aws-cdk/aws-stepfunctions.cloudformation.ActivityResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: activityName

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.ActivityName` *(readonly)*


ActivityResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ActivityResourceProps



   .. py:attribute:: activityName

      ``AWS::StepFunctions::Activity.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-activity.html#cfn-stepfunctions-activity-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


StateMachineResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: StateMachineResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``StateMachineResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``StateMachineResource``
   :type properties: :py:class:`~@aws-cdk/aws-stepfunctions.cloudformation.StateMachineResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: stateMachineName

      :type: :py:class:`~@aws-cdk/aws-stepfunctions.StateMachineName` *(readonly)*


StateMachineResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: StateMachineResourceProps



   .. py:attribute:: definitionString

      ``AWS::StepFunctions::StateMachine.DefinitionString``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-definitionstring


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleArn

      ``AWS::StepFunctions::StateMachine.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: stateMachineName

      ``AWS::StepFunctions::StateMachine.StateMachineName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-stepfunctions-statemachine.html#cfn-stepfunctions-statemachine-statemachinename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-stepfunctions

